// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlashCardsCell renders Empty successfully 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="carousel flashcards rounded-box bg-gradient-to-t from-neutral to-secondary"
        style="min-width: 320px;"
      >
        <div
          class="flashcard glass mx-auto mt-5 rounded-xl"
        >
          <div
            class="flex flex-col items-center justify-center h-full text-primary-content"
          >
            <svg
              class="mb-2"
              fill="currentColor"
              height="40"
              stroke="currentColor"
              stroke-width="0"
              version="1.1"
              viewBox="0 0 16 16"
              width="40"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.341 3.579c-0.347-0.473-0.831-1.027-1.362-1.558s-1.085-1.015-1.558-1.362c-0.806-0.591-1.197-0.659-1.421-0.659h-7.75c-0.689 0-1.25 0.561-1.25 1.25v13.5c0 0.689 0.561 1.25 1.25 1.25h11.5c0.689 0 1.25-0.561 1.25-1.25v-9.75c0-0.224-0.068-0.615-0.659-1.421zM12.271 2.729c0.48 0.48 0.856 0.912 1.134 1.271h-2.406v-2.405c0.359 0.278 0.792 0.654 1.271 1.134zM14 14.75c0 0.136-0.114 0.25-0.25 0.25h-11.5c-0.135 0-0.25-0.114-0.25-0.25v-13.5c0-0.135 0.115-0.25 0.25-0.25 0 0 7.749-0 7.75 0v3.5c0 0.276 0.224 0.5 0.5 0.5h3.5v9.75z"
              />
            </svg>
            Not found
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="carousel flashcards rounded-box bg-gradient-to-t from-neutral to-secondary"
      style="min-width: 320px;"
    >
      <div
        class="flashcard glass mx-auto mt-5 rounded-xl"
      >
        <div
          class="flex flex-col items-center justify-center h-full text-primary-content"
        >
          <svg
            class="mb-2"
            fill="currentColor"
            height="40"
            stroke="currentColor"
            stroke-width="0"
            version="1.1"
            viewBox="0 0 16 16"
            width="40"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.341 3.579c-0.347-0.473-0.831-1.027-1.362-1.558s-1.085-1.015-1.558-1.362c-0.806-0.591-1.197-0.659-1.421-0.659h-7.75c-0.689 0-1.25 0.561-1.25 1.25v13.5c0 0.689 0.561 1.25 1.25 1.25h11.5c0.689 0 1.25-0.561 1.25-1.25v-9.75c0-0.224-0.068-0.615-0.659-1.421zM12.271 2.729c0.48 0.48 0.856 0.912 1.134 1.271h-2.406v-2.405c0.359 0.278 0.792 0.654 1.271 1.134zM14 14.75c0 0.136-0.114 0.25-0.25 0.25h-11.5c-0.135 0-0.25-0.114-0.25-0.25v-13.5c0-0.135 0.115-0.25 0.25-0.25 0 0 7.749-0 7.75 0v3.5c0 0.276 0.224 0.5 0.5 0.5h3.5v9.75z"
            />
          </svg>
          Not found
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FlashCardsCell renders Failure successfully 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="carousel flashcards rounded-box bg-gradient-to-t from-neutral to-secondary"
        style="min-width: 320px;"
      >
        <div
          class="flashcard glass mx-auto mt-5 rounded-xl"
        >
          <div
            class="flex flex-col items-center justify-center h-full text-primary-content"
          >
            <svg
              class="mb-2"
              fill="currentColor"
              height="48"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="48"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12,2C6.486,2,2,5.589,2,10c0,2.908,1.898,5.515,5,6.934V22l5.34-4.005C17.697,17.852,22,14.32,22,10 C22,5.589,17.514,2,12,2z M12,16h-0.333L9,18v-2.417l-0.641-0.247C5.67,14.301,4,12.256,4,10c0-3.309,3.589-6,8-6s8,2.691,8,6 S16.411,16,12,16z"
              />
              <path
                d="M11 6H13V11H11zM11 12H13V14H11z"
              />
            </svg>
            500 Internal Server Error
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="carousel flashcards rounded-box bg-gradient-to-t from-neutral to-secondary"
      style="min-width: 320px;"
    >
      <div
        class="flashcard glass mx-auto mt-5 rounded-xl"
      >
        <div
          class="flex flex-col items-center justify-center h-full text-primary-content"
        >
          <svg
            class="mb-2"
            fill="currentColor"
            height="48"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="48"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12,2C6.486,2,2,5.589,2,10c0,2.908,1.898,5.515,5,6.934V22l5.34-4.005C17.697,17.852,22,14.32,22,10 C22,5.589,17.514,2,12,2z M12,16h-0.333L9,18v-2.417l-0.641-0.247C5.67,14.301,4,12.256,4,10c0-3.309,3.589-6,8-6s8,2.691,8,6 S16.411,16,12,16z"
            />
            <path
              d="M11 6H13V11H11zM11 12H13V14H11z"
            />
          </svg>
          500 Internal Server Error
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FlashCardsCell renders Loading successfully 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="carousel flashcards rounded-box bg-gradient-to-t from-neutral to-secondary"
        style="min-width: 320px;"
      >
        <div
          class="flashcard bg-base-100 mx-auto mt-5 rounded-xl animate-pulse"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="carousel flashcards rounded-box bg-gradient-to-t from-neutral to-secondary"
      style="min-width: 320px;"
    >
      <div
        class="flashcard bg-base-100 mx-auto mt-5 rounded-xl animate-pulse"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FlashCardsCell renders Success successfully 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex gap-6 flex-wrap justify-center"
      >
        <div
          class="carousel flashcards rounded-box bg-gradient-to-t from-neutral to-secondary"
          style="min-width: 320px;"
        >
          <div
            class="carousel-item w-full mt-6 flex-col items-center"
          >
            <div
              class="flashcard"
            >
              <div
                class="flashcard-body"
              >
                <div
                  class="flashcard-question bg-base-100 font-open-sans"
                >
                  <p>
                    What range of colour descriptors can be used to describe white wines?
                  </p>
                </div>
                <div
                  class="flashcard-answer bg-base-100 font-open-sans"
                >
                  <p>
                    Lemon, gold and amber
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="carousel-item w-full mt-6 flex-col items-center"
          >
            <div
              class="flashcard"
            >
              <div
                class="flashcard-body"
              >
                <div
                  class="flashcard-question bg-base-100 font-open-sans"
                >
                  <p>
                    What range of colour descriptors can be used to describe white wines?
                  </p>
                </div>
                <div
                  class="flashcard-answer bg-base-100 font-open-sans"
                >
                  <p>
                    Lemon, gold and amber
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="carousel-item w-full mt-6 flex-col items-center"
          >
            <div
              class="flashcard"
            >
              <div
                class="flashcard-body"
              >
                <div
                  class="flashcard-question bg-base-100 font-open-sans"
                >
                  <p>
                    What range of colour descriptors can be used to describe white wines?
                  </p>
                </div>
                <div
                  class="flashcard-answer bg-base-100 font-open-sans"
                >
                  <p>
                    Lemon, gold and amber
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="carousel-item w-full mt-6 flex-col items-center"
          >
            <div
              class="flashcard"
            >
              <div
                class="flashcard-body"
              >
                <div
                  class="flashcard-question bg-base-100 font-open-sans"
                >
                  <p>
                    What range of colour descriptors can be used to describe white wines?
                  </p>
                </div>
                <div
                  class="flashcard-answer bg-base-100 font-open-sans"
                >
                  <p>
                    Lemon, gold and amber
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="carousel-item w-full mt-6 flex-col items-center"
          >
            <div
              class="flashcard"
            >
              <div
                class="flashcard-body"
              >
                <div
                  class="flashcard-question bg-base-100 font-open-sans"
                >
                  <p>
                    What range of colour descriptors can be used to describe white wines?
                  </p>
                </div>
                <div
                  class="flashcard-answer bg-base-100 font-open-sans"
                >
                  <p>
                    Lemon, gold and amber
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sticky flex items-end right-1/2 transform translate-x-1/2 mb-6"
          >
            <div
              class="h-3 w-1 rounded-sm bg-base-100 mx-0.5 transform transition-opacity duration-200"
            />
            <div
              class="h-3 w-1 rounded-sm bg-base-100 mx-0.5 transform transition-opacity duration-200 opacity-20"
            />
            <div
              class="h-3 w-1 rounded-sm bg-base-100 mx-0.5 transform transition-opacity duration-200 opacity-20"
            />
            <div
              class="h-3 w-1 rounded-sm bg-base-100 mx-0.5 transform transition-opacity duration-200 opacity-20"
            />
            <div
              class="h-3 w-1 rounded-sm bg-base-100 mx-0.5 transform transition-opacity duration-200 opacity-20"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex gap-6 flex-wrap justify-center"
    >
      <div
        class="carousel flashcards rounded-box bg-gradient-to-t from-neutral to-secondary"
        style="min-width: 320px;"
      >
        <div
          class="carousel-item w-full mt-6 flex-col items-center"
        >
          <div
            class="flashcard"
          >
            <div
              class="flashcard-body"
            >
              <div
                class="flashcard-question bg-base-100 font-open-sans"
              >
                <p>
                  What range of colour descriptors can be used to describe white wines?
                </p>
              </div>
              <div
                class="flashcard-answer bg-base-100 font-open-sans"
              >
                <p>
                  Lemon, gold and amber
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="carousel-item w-full mt-6 flex-col items-center"
        >
          <div
            class="flashcard"
          >
            <div
              class="flashcard-body"
            >
              <div
                class="flashcard-question bg-base-100 font-open-sans"
              >
                <p>
                  What range of colour descriptors can be used to describe white wines?
                </p>
              </div>
              <div
                class="flashcard-answer bg-base-100 font-open-sans"
              >
                <p>
                  Lemon, gold and amber
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="carousel-item w-full mt-6 flex-col items-center"
        >
          <div
            class="flashcard"
          >
            <div
              class="flashcard-body"
            >
              <div
                class="flashcard-question bg-base-100 font-open-sans"
              >
                <p>
                  What range of colour descriptors can be used to describe white wines?
                </p>
              </div>
              <div
                class="flashcard-answer bg-base-100 font-open-sans"
              >
                <p>
                  Lemon, gold and amber
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="carousel-item w-full mt-6 flex-col items-center"
        >
          <div
            class="flashcard"
          >
            <div
              class="flashcard-body"
            >
              <div
                class="flashcard-question bg-base-100 font-open-sans"
              >
                <p>
                  What range of colour descriptors can be used to describe white wines?
                </p>
              </div>
              <div
                class="flashcard-answer bg-base-100 font-open-sans"
              >
                <p>
                  Lemon, gold and amber
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="carousel-item w-full mt-6 flex-col items-center"
        >
          <div
            class="flashcard"
          >
            <div
              class="flashcard-body"
            >
              <div
                class="flashcard-question bg-base-100 font-open-sans"
              >
                <p>
                  What range of colour descriptors can be used to describe white wines?
                </p>
              </div>
              <div
                class="flashcard-answer bg-base-100 font-open-sans"
              >
                <p>
                  Lemon, gold and amber
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sticky flex items-end right-1/2 transform translate-x-1/2 mb-6"
        >
          <div
            class="h-3 w-1 rounded-sm bg-base-100 mx-0.5 transform transition-opacity duration-200"
          />
          <div
            class="h-3 w-1 rounded-sm bg-base-100 mx-0.5 transform transition-opacity duration-200 opacity-20"
          />
          <div
            class="h-3 w-1 rounded-sm bg-base-100 mx-0.5 transform transition-opacity duration-200 opacity-20"
          />
          <div
            class="h-3 w-1 rounded-sm bg-base-100 mx-0.5 transform transition-opacity duration-200 opacity-20"
          />
          <div
            class="h-3 w-1 rounded-sm bg-base-100 mx-0.5 transform transition-opacity duration-200 opacity-20"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
